--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@
           text-align: center;
           font-size: 20px;
           border-radius: 30px;
-          margin: 45px 0px 0px 0px;
+          margin: 15px 0px 0px 0px;
       }
       
       .col-3 p1 {
@@ -55,7 +55,7 @@
           font-size: 20px;
           text-align: center;
           border-radius: 30px;
-          margin: 45px 0px 0px 0px;
+          margin: 15px 0px 0px 0px;
       }
       
       .col-3 p2 {
@@ -64,7 +64,7 @@
           text-align: center;
           font-size: 20px;
           border-radius: 30px;
-          margin: 45px 0px 0px 0px;
+          margin: 15px 0px 0px 0px;
       }
       
       .col-3 p3 {
@@ -73,7 +73,7 @@
           text-align: center;
           font-size: 20px;
           border-radius: 30px;
-          margin: 45px 0px 0px 0px;
+          margin: 15px 0px 0px 0px;
       }
       
       h4 {
@@ -210,4 +210,25 @@
           flex-direction: row;
           width: 100%;
           align-items: center;
+      }
+      
+      .weather-forecast {
+          margin-top: 20px;
+          text-align: center;
+          color: white;
+      }
+      
+      .weather-forecast-date {
+          font-size: 16px;
+          color: white;
+      }
+      
+      .weather-forecast-temperature-min {
+          opacity: 0.8;
+          color: white;
+      }
+      
+      .weather-forecast-temperatures {
+          font-size: 13px;
+          color: white;
       }
